Fixed font rendering on mobile browsers.

--- a/semantic/src/sass/layout.scss
+++ b/semantic/src/sass/layout.scss
@@ -1,3 +1,7 @@
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
+}
+
 .mainmenu.container {
   margin-bottom: -3em;
 }
